--- a/Timer/Main.storyboard
+++ b/Timer/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3nO-06-y7o">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3nO-06-y7o">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
@@ -51,8 +51,8 @@
                                             <constraint firstAttribute="bottom" secondItem="Ct7-LN-Ccc" secondAttribute="bottom" id="eJ5-td-yDi"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yg9-JT-VrH">
-                                        <rect key="frame" x="0.0" y="156" width="600" height="155"/>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yg9-JT-VrH">
+                                        <rect key="frame" x="0.0" y="156" width="600" height="156"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="h7R-OJ-x8Y">
                                                 <rect key="frame" x="200" y="48" width="200" height="60"/>
@@ -85,7 +85,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZPJ-6f-9Sv">
-                                        <rect key="frame" x="0.0" y="311" width="600" height="156"/>
+                                        <rect key="frame" x="0.0" y="312" width="600" height="156"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
@@ -113,6 +113,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YMa-YF-74y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2226" y="419"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="LtP-2A-AoT">
+            <objects>
+                <viewController id="Gp1-6v-XuK" customClass="AlarmViewController" customModule="Timer" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="A9c-7V-aMs"/>
+                        <viewControllerLayoutGuide type="bottom" id="zPK-x0-sjG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2ER-EZ-2pc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lz-MO-cIS">
+                                <rect key="frame" x="217" y="289" width="166" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1lz-MO-cIS" firstAttribute="centerY" secondItem="2ER-EZ-2pc" secondAttribute="centerY" id="YdZ-nz-xx3"/>
+                            <constraint firstItem="1lz-MO-cIS" firstAttribute="centerX" secondItem="2ER-EZ-2pc" secondAttribute="centerX" id="beh-FQ-cmA"/>
+                            <constraint firstItem="1lz-MO-cIS" firstAttribute="top" secondItem="A9c-7V-aMs" secondAttribute="bottom" constant="269" id="z2N-HZ-cRW"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="LHZ-OG-bzL"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VWf-YA-Omm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2881" y="419"/>
         </scene>
         <!--Item-->
         <scene sceneID="d4E-f3-CS3">
@@ -144,6 +176,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="ZdH-2Q-04I" kind="relationship" relationship="viewControllers" id="iUX-Gv-VCR"/>
+                        <segue destination="Gp1-6v-XuK" kind="relationship" relationship="viewControllers" id="mF1-0e-K6y"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wAe-Jv-OM8" userLabel="First Responder" sceneMemberID="firstResponder"/>
