--- a/Timer/Main.storyboard
+++ b/Timer/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3nO-06-y7o">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3nO-06-y7o">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
@@ -16,26 +16,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gJi-aU-AXA">
-                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="2"/>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gJi-aU-AXA">
+                                <rect key="frame" x="0.0" y="67" width="600" height="5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" id="cf7-vP-g5C"/>
+                                    <constraint firstAttribute="height" constant="5" id="6HK-ww-mTL"/>
                                 </constraints>
                             </progressView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Pib-ef-qhE">
-                                <rect key="frame" x="0.0" y="84" width="600" height="467"/>
+                                <rect key="frame" x="0.0" y="71" width="600" height="480"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tXH-Pv-dyC">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="156"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="160"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c82-pb-BA9">
-                                                <rect key="frame" x="279" y="67" width="42" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c82-pb-BA9">
+                                                <rect key="frame" x="251" y="56" width="98" height="47"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="40"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Ct7-LN-Ccc">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="156"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="160"/>
                                                 <date key="date" timeIntervalSinceReferenceDate="476745808.80644703">
                                                     <!--2016-02-09 21:23:28 +0000-->
                                                 </date>
@@ -51,11 +51,11 @@
                                             <constraint firstAttribute="bottom" secondItem="Ct7-LN-Ccc" secondAttribute="bottom" id="eJ5-td-yDi"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yg9-JT-VrH">
-                                        <rect key="frame" x="0.0" y="156" width="600" height="156"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yg9-JT-VrH">
+                                        <rect key="frame" x="0.0" y="160" width="600" height="160"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="h7R-OJ-x8Y">
-                                                <rect key="frame" x="200" y="48" width="200" height="60"/>
+                                                <rect key="frame" x="200" y="50" width="200" height="60"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZL7-mL-wtP">
                                                         <rect key="frame" x="0.0" y="0.0" width="42" height="60"/>
@@ -85,7 +85,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZPJ-6f-9Sv">
-                                        <rect key="frame" x="0.0" y="312" width="600" height="156"/>
+                                        <rect key="frame" x="0.0" y="320" width="600" height="160"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
@@ -93,12 +93,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="gJi-aU-AXA" firstAttribute="top" secondItem="eLw-Xb-Itg" secondAttribute="top" id="1kd-bD-XWg"/>
+                            <constraint firstItem="gJi-aU-AXA" firstAttribute="leading" secondItem="eLw-Xb-Itg" secondAttribute="leading" id="HBf-Bk-a0u"/>
                             <constraint firstItem="Pib-ef-qhE" firstAttribute="leading" secondItem="eLw-Xb-Itg" secondAttribute="leading" id="IRL-Yr-zx8"/>
-                            <constraint firstItem="gJi-aU-AXA" firstAttribute="leading" secondItem="Pib-ef-qhE" secondAttribute="leading" id="JHs-34-eTd"/>
-                            <constraint firstItem="Pib-ef-qhE" firstAttribute="top" secondItem="dO3-jk-XEZ" secondAttribute="bottom" constant="20" id="SET-8E-ymO"/>
+                            <constraint firstItem="Pib-ef-qhE" firstAttribute="top" secondItem="dO3-jk-XEZ" secondAttribute="bottom" constant="7" id="SET-8E-ymO"/>
+                            <constraint firstItem="gJi-aU-AXA" firstAttribute="top" secondItem="eLw-Xb-Itg" secondAttribute="top" constant="67" id="V35-Ur-AXb"/>
                             <constraint firstAttribute="trailing" secondItem="Pib-ef-qhE" secondAttribute="trailing" id="nIB-a0-oRE"/>
                             <constraint firstItem="wDj-Ra-hyI" firstAttribute="top" secondItem="Pib-ef-qhE" secondAttribute="bottom" id="r3B-g9-dcq"/>
+                            <constraint firstItem="gJi-aU-AXA" firstAttribute="trailing" secondItem="eLw-Xb-Itg" secondAttribute="trailing" id="uFb-Dg-hLS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="VgY-XE-jJS"/>
@@ -129,7 +130,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lz-MO-cIS">
                                 <rect key="frame" x="217" y="289" width="166" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
