--- a/Timer/Main.storyboard
+++ b/Timer/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LvS-NF-DQc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LvS-NF-DQc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -23,14 +23,12 @@
                                 <subviews>
                                     <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="x8T-dn-vc6">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="0.0"/>
-                                        <animations/>
                                     </progressView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CxO-xX-Cuq" userLabel="Top View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="216"/>
                                         <subviews>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RhZ-h7-GfE">
                                                 <rect key="frame" x="-8" y="0.0" width="600" height="216"/>
-                                                <animations/>
                                                 <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="80"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -39,7 +37,6 @@
                                                 <subviews>
                                                     <pickerView contentMode="scaleToFill" horizontalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="adu-ZC-MK3">
                                                         <rect key="frame" x="0.0" y="0.0" width="243" height="216"/>
-                                                        <animations/>
                                                         <connections>
                                                             <outlet property="dataSource" destination="7Ct-Mg-aDo" id="djd-iU-6u9"/>
                                                             <outlet property="delegate" destination="7Ct-Mg-aDo" id="BH2-AR-lkh"/>
@@ -47,14 +44,12 @@
                                                     </pickerView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hours" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vl5-K1-jwl">
                                                         <rect key="frame" x="243" y="0.0" width="46" height="216"/>
-                                                        <animations/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fCd-tX-ggQ">
-                                                        <rect key="frame" x="289" y="0.0" width="243" height="216"/>
-                                                        <animations/>
+                                                    <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fCd-tX-ggQ">
+                                                        <rect key="frame" x="289" y="0.0" width="242" height="216"/>
                                                         <connections>
                                                             <outlet property="dataSource" destination="7Ct-Mg-aDo" id="pds-22-EY4"/>
                                                             <outlet property="delegate" destination="7Ct-Mg-aDo" id="Ssc-k4-1Mx"/>
@@ -62,19 +57,16 @@
                                                     </pickerView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="giG-d9-y4T">
                                                         <rect key="frame" x="531" y="0.0" width="61" height="216"/>
-                                                        <animations/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <animations/>
                                                 <constraints>
                                                     <constraint firstItem="adu-ZC-MK3" firstAttribute="width" secondItem="fCd-tX-ggQ" secondAttribute="width" id="03K-bM-3OT"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
-                                        <animations/>
                                         <color key="backgroundColor" red="0.94117647059999998" green="0.65490196079999996" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="RhZ-h7-GfE" firstAttribute="top" secondItem="CxO-xX-Cuq" secondAttribute="top" id="17c-E6-k9Q"/>
@@ -95,7 +87,6 @@
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfZ-V1-qyv">
                                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                                        <animations/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="100" id="1dF-3n-v8W"/>
                                                             <constraint firstAttribute="width" secondItem="gfZ-V1-qyv" secondAttribute="height" multiplier="1:1" id="AZb-GG-PoN"/>
@@ -107,7 +98,6 @@
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pJm-0j-V8h">
                                                         <rect key="frame" x="155" y="0.0" width="100" height="100"/>
-                                                        <animations/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="pJm-0j-V8h" secondAttribute="height" multiplier="1:1" id="GGu-TV-iVS"/>
                                                         </constraints>
@@ -117,13 +107,11 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <animations/>
                                                 <constraints>
                                                     <constraint firstItem="gfZ-V1-qyv" firstAttribute="width" secondItem="pJm-0j-V8h" secondAttribute="width" id="Amf-zl-rUV"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
-                                        <animations/>
                                         <color key="backgroundColor" red="0.94117647059999998" green="0.65490196079999996" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="9zi-CJ-6iG" secondAttribute="bottom" id="0px-Wt-acL"/>
@@ -133,14 +121,11 @@
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rqy-CA-w3K" userLabel="Bottom View">
                                         <rect key="frame" x="0.0" y="316" width="600" height="171"/>
-                                        <animations/>
                                         <color key="backgroundColor" red="0.94117647059999998" green="0.65490196079999996" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                 </subviews>
-                                <animations/>
                             </stackView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="KVg-F3-GOs" firstAttribute="leading" secondItem="7DF-UV-e2C" secondAttribute="leading" id="0e8-2h-fU2"/>
@@ -173,7 +158,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="GDL-Ob-0c5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -196,20 +180,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CBP-OM-yT7">
-                                <rect key="frame" x="217" y="289" width="166" height="21"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="DdO-rG-hBi">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                            </stackView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="CBP-OM-yT7" firstAttribute="centerX" secondItem="HHd-E0-Qs6" secondAttribute="centerX" id="Jok-tZ-LC4"/>
-                            <constraint firstItem="CBP-OM-yT7" firstAttribute="centerY" secondItem="HHd-E0-Qs6" secondAttribute="centerY" id="pdu-cg-oaQ"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8bo-SO-uOJ"/>
                 </viewController>
@@ -224,7 +199,6 @@
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="GH4-e0-C6f">
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
@@ -245,7 +219,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="aG1-yg-JU3">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
